# battery-load-tester

./: .gitignore  README.md  config.yaml  pyproject.toml
.codex/: config.toml
reference/other/: rc3563.py
src/battery_load_tester/: api.py  config.py  load_test_service.py  main.py  models.py  rc3563.py  storage.py
src/battery_load_tester/templates/: index.html
tests/: test_rc3563_parser.py  test_storage.py
